fix table DOM structure; wrap cookie content in pre

--- a/src/popup/style.css
+++ b/src/popup/style.css
@@ -43,3 +43,8 @@ table {
 .expandable-row:hover .expandable-opener.open::before {
   content: '\25BD';
 }
+
+pre {
+  overflow-x: auto;
+  width: 500px;
+}
